@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.1127 2006/08/25 18:16:25 xtraeme Exp $
+$NetBSD: CHANGES-2006,v 1.1128 2006/08/25 19:51:31 abs Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -4092,3 +4092,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Added x11/bwidget version 1.6.0 [minskim 2006-08-25]
 	Updated graphics/comix to 3.5 [wiz 2006-08-25]
 	Updated multimedia/dvdrip to 0.98.1 [xtraeme 2006-08-25]
+	Updated pkgtools/pkg_chk to 1.80 [abs 2006-08-25]
